pulldown-cmark-mdcat/tests/snapshots/render/dumb@commonmark-spec-500-links.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 122
expression: "render_to_string(markdown_file, &dumb_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/500-links.md
---
link[1]

link[2]

link[3]

[1]: #fragment
[2]: http://example.com#fragment
[3]: http://example.com?foo=3#frag
